[package]
name = "airborne_analytics_server"
description = "Analytics server for airborne"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { workspace = true, features = ["serde"] }
clickhouse = { version = "0.12.2", features = ["uuid", "time"] }
dotenv = { workspace = true }
futures = { workspace = true }
prometheus = { version = "0.9", features = ["process"] }
rdkafka = { version = "0.36", features = [
    "ssl",
    "sasl",
    "tokio",
    "cmake-build",
] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
thiserror = { workspace = true }
time = { version = "0.3.47", features = ["macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
